k8s/overlays/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-service
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: sales-service
          image: your-registry/sales-service:dev-1.0.0
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
