k8s/overlays/dev/ingress-sales-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sales-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: sales.dev.retail.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sales-service
                port:
                  number: 80
